force-app/main/default/objects/Publication__c/Publication__c.object-meta.xml
<CustomObject>

    <label>Publication</label>

    <pluralLabel>Publications</pluralLabel>

    <nameField>
        <label>Publication Title</label>
        <type>Text</type>
    </nameField>


    <sharingModel>ReadWrite</sharingModel>






</CustomObject>