force-app/main/default/objects/Publication__c/fields/abstract__c.field-meta.xml
<CustomField>

    <fullName>abstract__c</fullName>

    <label>Abstract</label>

    <type>LongTextArea</type>

    <length>32768</length>


</CustomField>