force-app/main/default/objects/Publication__c/fields/citation__c.field-meta.xml
<CustomField>

    <fullName>citation__c</fullName>

    <label>Citation</label>

    <type>LongTextArea</type>

    <length>32768</length>


</CustomField>