force-app/main/default/objects/Publication__c/fields/doi__c.field-meta.xml
<CustomField>

    <fullName>doi__c</fullName>

    <label>DOI</label>

    <type>Text</type>

    <length>255</length>

</CustomField>