force-app/main/default/objects/Publication__c/fields/journal__c.field-meta.xml
<CustomField>

    <fullName>journal__c</fullName>

    <label>Journal</label>

    <type>Text</type>

    <length>255</length>

</CustomField>