force-app/main/default/objects/Publication__c/fields/organization__c.field-meta.xml
<CustomField>

    <fullName>organization__c</fullName>

    <label>Organization</label>

    <type>Lookup</type>

    <referenceTo>Account</referenceTo>

    <relationshipLabel>Publications</relationshipLabel>

    <relationshipName>Publications</relationshipName>

</CustomField>