force-app/main/default/objects/Publication__c/fields/publication_date__c.field-meta.xml
<CustomField>

    <fullName>publication_date__c</fullName>

    <label>Publication Date</label>

    <type>Date</type>

</CustomField>