force-app/main/default/objects/Publication__c/fields/url__c.field-meta.xml
<CustomField>

    <fullName>url__c</fullName>

    <label>Publication URL</label>

    <type>Url</type>

</CustomField>